# binoxxo-wasm

./: .gitignore  Cargo.toml  Readme.md
pkg/: README.md  binoxxo_wasm.d.ts  binoxxo_wasm.js  binoxxo_wasm_bg.wasm  package.json
src/: lib.rs
tests/: check_board_test.rs  create_puzzle_test.rs
