[package]
name = "binoxxo_wasm"
version = "0.1.0"
authors = ["Martin Suesskraut <martin.suesskraut@gmail.com>"]
description = "WASM interface to binoxxo crate"
repository = "https://github.com/msuesskraut/binoxxo-wasm.git"
readme = "Readme.md"
keywords = ["wasm", "binoxxo", "puzzle", "puzzle-game", "game", "puzzle-generator"]
categories = ["games"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
binoxxo = { version = "0.1", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.2"